[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
strip = true # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # This can remove dead code and often times reduces binary size.
codegen-units = 1 # Allow for maximum size reduction optimizations, but longer compile time.

[dependencies]
wayland-client = "0.30.2"
wayland-scanner = "0.30.1"
wayland-protocols = "0.30.1"
pico-args = "0.5"